@@ -1,3 +1,7 @@
+2009-05-13  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* preferences.py, base.py, folder.py: Code refactoring.
+
 2009-05-12  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
 	* plugins/__init__.py: Capitalized some valiables.
